--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PGHOST=
-PGUSER=
-PGPASSWORD=
-PGDATABASE=
-PGPORT=
+DATABASE_URL=postgresql://username:password@localhost:5432/dbname
+PGHOST=localhost
+PGUSER=your_username
+PGPASSWORD=your_password
+PGDATABASE=your_database
+PGPORT=5432
