--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,26 @@
-version: '3.8'
 services:
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
+    container_name: peak_ecommerce_db
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: peak_ecommerce
-      POSTGRES_USER: dev
-      POSTGRES_PASSWORD: password123
+      POSTGRES_DB: ${PGDATABASE}
+      POSTGRES_USER: ${PGUSER}
+      POSTGRES_PASSWORD: ${PGPASSWORD}
     ports:
-      - "5432:5432"
+      - "${PGPORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${PGUSER} -d ${PGDATABASE}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   postgres_data:
+
+networks:
+  app-network:
