--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "zod": "^4.0.5",
     "zustand": "^5.0.6"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
