--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "cross-env DATABASE_URL=$DATABASE_URL_POOL next build",
     "start": "next start",
     "lint": "next lint",
-    
+    "deploy": "prisma migrate deploy && vercel --prod",
     "db:push": "cross-env DATABASE_URL=$DATABASE_URL_DIRECT npx prisma db push",
     "db:seed": "cross-env DATABASE_URL=$DATABASE_URL_DIRECT npx prisma db seed",
     "migrate": "cross-env DATABASE_URL=$DATABASE_URL_DIRECT npx prisma migrate deploy",
@@ -55,6 +55,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "postcss": "^8.5.6",
